Enhance role and permission management
Updated IPermissionService and IRoleService interfaces to include new methods for managing role permissions and retrieving data in HTML format. Enhanced MappingProfile with new mappings for RolePermission and Permission. Improved PermissionService and RoleService with additional methods and updated constructors. Corrected permission checks in controllers and views. Added new DTOs for role and permission data. Introduced a new migration for seeding role permissions. Added PermissionController for handling permission-related actions. Updated Index.cshtml and added new JavaScript files for managing permissions and roles.

--- a/TicketTrackingSystem.MVC/Views/Department/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Department/Index.cshtml
@@ -27,7 +27,7 @@
 <input type="hidden" id="canAdd" value="@(canAdd ? " true" : "false" )" />
 <input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
 <input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
-@if (!canAdd)
+@if (canAdd)
 {
 
     <div class="row">
@@ -36,7 +36,7 @@
         </div>
     </div>
 }
-@if (!canView)
+@if (canView)
 {
 
     <div class="row justify-content-center">
@@ -79,22 +79,22 @@
 @section Scripts {
     <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.js"></script>
 
-    @if (!canView)
+    @if (canView)
     {
         <script type="module" src="~/view/department/departmenttable.js"></script>
         <script type="module" src="~/view/department/adddepartment.js"></script>
         <script type="module" src="~/view/department/deletedepartment.js"></script>
         <script type="module" src="~/view/department/editdepartment.js"></script>
     }
-    else if (!canAdd)
+    else if (canAdd)
     {
 
     }
-    else if (!canEdit)
+    else if (canEdit)
     {
 
     }
-    else if (!canDelete)
+    else if (canDelete)
     {
 
     }
