--- a/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Permission" asp-action="Index">Permissions</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Department" asp-action="Index">Departments</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Project" asp-action="Index">Projects</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Users" asp-action="Index">Tickets</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Ticket" asp-action="Index">Tickets</a>
             </div>
         </div>
         <!-- Page content wrapper-->
