--- a/TicketTrackingSystem.MVC/Views/Department/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Department/Index.cshtml
@@ -7,54 +7,59 @@
     bool canAdd = false;
     bool canEdit = false;
     bool canDelete = false;
-    if (User.Identity.IsAuthenticated)
+
+}
+@if (User.Identity.IsAuthenticated)
+{
+
+    var user = await _userService.GetUserByClaim(User);
+    var userId = user.Id;
+    permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewDepartment.ToString()
+                                                                , PermissionName.CreateDepartment.ToString()
+                                                                , PermissionName.EditDepartment.ToString()
+                                                                , PermissionName.DeleteDepartment.ToString());
+    canView = permissionCheckResult[PermissionName.ViewDepartment.ToString()];
+    canAdd = permissionCheckResult[PermissionName.CreateDepartment.ToString()];
+    canEdit = permissionCheckResult[PermissionName.EditDepartment.ToString()];
+    canDelete = permissionCheckResult[PermissionName.DeleteDepartment.ToString()];
+
+
+    <input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
+    <input type="hidden" id="canAdd" value="@(canAdd ? " true" : "false" )" />
+    <input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
+    <input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
+    @if (!canView && !canAdd && !canView && !canDelete)
+    {
+        <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
+    }
+    @if (canAdd)
     {
 
-        var user = await _userService.GetUserByClaim(User);
-        var userId = user.Id;
-        permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewDepartment.ToString()
-                                                                    , PermissionName.CreateDepartment.ToString()
-                                                                    , PermissionName.EditDepartment.ToString()
-                                                                    , PermissionName.DeleteDepartment.ToString());
-        canView = permissionCheckResult[PermissionName.ViewDepartment.ToString()];
-        canAdd = permissionCheckResult[PermissionName.CreateDepartment.ToString()];
-        canEdit = permissionCheckResult[PermissionName.EditDepartment.ToString()];
-        canDelete = permissionCheckResult[PermissionName.DeleteDepartment.ToString()];
+        <div class="row">
+            <div class="col text-end">
+                <button class="btn btn-primary" id="addDepartment">Add Department</button>
+            </div>
+        </div>
+    }
+    @if (canView)
+    {
 
+        <div class="row justify-content-center">
+            <div class="col">
+                <table id="departmentTable" class="table table-striped table-bordered " cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
     }
 }
-<input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
-<input type="hidden" id="canAdd" value="@(canAdd ? " true" : "false" )" />
-<input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
-<input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
-@if (canAdd)
-{
-
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary" id="addDepartment">Add Department</button>
-        </div>
-    </div>
-}
-@if (canView)
-{
-
-    <div class="row justify-content-center">
-        <div class="col">
-            <table id="departmentTable" class="table table-striped table-bordered " cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-            </table>
-        </div>
-    </div>
-}
-
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -79,23 +84,25 @@
 @section Scripts {
     <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.js"></script>
 
-    @if (canView)
-    {
-        <script type="module" src="~/view/department/departmenttable.js"></script>
-        <script type="module" src="~/view/department/adddepartment.js"></script>
-        <script type="module" src="~/view/department/deletedepartment.js"></script>
-        <script type="module" src="~/view/department/editdepartment.js"></script>
-    }
-    else if (canAdd)
-    {
+    @{
+        if (canView)
+        {
+            <script type="module" src="~/view/department/departmenttable.js"></script>
+        }
+        if (canAdd)
+        {
 
-    }
-    else if (canEdit)
-    {
+            <script type="module" src="~/view/department/adddepartment.js"></script>
+        }
+        if (canEdit)
+        {
+            <script type="module" src="~/view/department/editdepartment.js"></script>
 
-    }
-    else if (canDelete)
-    {
+        }
+        if (canDelete)
+        {
+            <script type="module" src="~/view/department/deletedepartment.js"></script>
 
+        }
     }
 }
