--- a/TicketTrackingSystem.MVC/Views/Project/Details.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Details.cshtml
@@ -1,15 +1,10 @@
-﻿@model RoleDto
+﻿@model ProjectDto
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<div class="row">
-    <div class="col">
-        <h2>Role Details</h2>
-    </div>
-</div>
-<input type="hidden" id="roleId" value="@Model.Id" />
+<input type="hidden" id="projectId" value="@Model.Id" />
 <div class="row">
     <div class="col">
         <div class="card">
@@ -25,6 +20,10 @@
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" disabled="disabled" />
                 </div>
+                <div class="form-group" accesskey="">
+                    <label asp-for="Description" class="control-label"></label>
+                    <input asp-for="Description" class="form-control" disabled="disabled" />
+                </div>
             </div>
             <div class="card-footer">
                 <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
@@ -34,18 +33,18 @@
 </div>
 <hr class="bg-black border-3 border-top border-dark mb-5" />
 
-<div class="row mb-2">
+<div class="row mb-3">
 
         <div class="col">
             <h3 class="m-0">All Users</h3>
         </div>
-    <div class="col text-end">
+    <div class="col  text-end">
         <button id="switchBtn" class="btn btn-primary ">Show Users With Role</button>
     </div>
 </div>
 <div class="row justify-content-center">
     <div class="col">
-        <table id="userWithoutRoleTable" class="table table-striped table-bordered " cellspacing="0">
+        <table id="userMemberTable" class="table table-striped table-bordered " cellspacing="0">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -87,6 +86,6 @@
 @section Scripts {
     <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.js"></script>
 
-    <script type="module" src="~/view/role/assignroletouser/userwithoutroletable.js"></script>
+    <script type="module" src="~/view/project/details/projectMemberTable.js"></script>
 
 }
