--- a/TicketTrackingSystem.MVC/Views/Project/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@inject IPermissionService _permissionService
+﻿@using TicketTrackingSystem.Core.Model.Enum
+@inject IPermissionService _permissionService
 @inject IUserService _userService;
 @{
     ViewData["Title"] = "Project";
@@ -7,54 +8,90 @@
     bool canAdd = false;
     bool canEdit = false;
     bool canDelete = false;
-    if (User.Identity.IsAuthenticated)
+
+}
+
+@if (User.Identity.IsAuthenticated)
+{
+
+    var user = await _userService.GetUserByClaim(User);
+    var userId = user.Id;
+    permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewProject.ToString()
+                                                                , PermissionName.CreateProject.ToString()
+                                                                , PermissionName.EditProject.ToString()
+                                                                , PermissionName.DeleteProject.ToString());
+    canView = permissionCheckResult[PermissionName.ViewProject.ToString()];
+    canAdd = permissionCheckResult[PermissionName.CreateProject.ToString()];
+    canEdit = permissionCheckResult[PermissionName.EditProject.ToString()];
+    canDelete = permissionCheckResult[PermissionName.DeleteProject.ToString()];
+
+
+    <input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
+    <input type="hidden" id="canAdd" value="@(canAdd ? "true" : "false" )" />
+    <input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
+    <input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
+    @if (!canView && !canAdd && !canView && !canDelete)
     {
-
-        var user = await _userService.GetUserByClaim(User);
-        var userId = user.Id;
-        permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewProject.ToString()
-                                                                    , PermissionName.CreateProject.ToString()
-                                                                    , PermissionName.EditProject.ToString()
-                                                                    , PermissionName.DeleteProject.ToString());
-        canView = permissionCheckResult[PermissionName.ViewProject.ToString()];
-        canAdd = permissionCheckResult[PermissionName.CreateProject.ToString()];
-        canEdit = permissionCheckResult[PermissionName.EditProject.ToString()];
-        canDelete = permissionCheckResult[PermissionName.DeleteProject.ToString()];
-
+        <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
     }
-}
-<input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
-<input type="hidden" id="canAdd" value="@(canAdd ? "true" : "false" )" />
-<input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
-<input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
-@if (canAdd)
-{
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary" id="addButton">Add Project</button>
-        </div>
+    <div class="row mt-5">
+        @if (canView && user.UserType.Equals(UserType.Member) && User.IsInRole("Admin"))
+        {
+                <div class="col">
+                    <h3>All Projects</h3>
+                </div>
+        }
+        @if (canAdd && user.UserType.Equals(UserType.Member))
+        {
+            <div class="col text-end">
+                <button class="btn btn-primary" id="addButton">Add Project</button>
+            </div>
+        }
     </div>
-}
-@if (canView)
-{
-
-    <div class="row justify-content-center">
-        <div class="col">
-            <table id="projectTable" class="table table-striped table-bordered " cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Created At</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-            </table>
+    @if (canView && user.UserType.Equals(UserType.Member) && User.IsInRole("Admin"))
+    {
+        <div class="row justify-content-center">
+            <div class="col">
+                <table id="projectTable" class="table table-striped table-bordered " cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Created At</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
         </div>
-    </div>
-}
+        <hr class="bg-black border-3 border-top border-dark mb-5" />
+    }
+    @if (canView)
+    {
+        <div class="row">
+            <div class="col">
+                <h3>My Projects</h3>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">
+                <table id="userProjectTable" class="table table-striped table-bordered " cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Created At</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
+    }
 
+}
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -79,23 +116,26 @@
 @section Scripts {
     <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.js"></script>
 
-    @if (canView)
-    {
-        <script type="module" src="~/view/project/projectTable.js"></script>
-        <script type="module" src="~/view/project/addProject.js"></script>
-        <script type="module" src="~/view/project/editProject.js"></script>
-        <script type="module" src="~/view/project/deleteProject.js"></script>
-    }
-    else if (canAdd)
-    {
+    @{
+        if (canView)
+        {
+            <script type="module" src="~/view/project/projectTable.js"></script>
+            <script type="module" src="~/view/project/projectUser/userProjectTable.js"></script>
+        }
+        if (canAdd)
+        {
+            <script type="module" src="~/view/project/addProject.js"></script>
 
-    }
-    else if (canEdit)
-    {
+        }
+        if (canEdit)
+        {
+            <script type="module" src="~/view/project/editProject.js"></script>
 
-    }
-    else if (canDelete)
-    {
+        }
+        if (canDelete)
+        {
+            <script type="module" src="~/view/project/deleteProject.js"></script>
 
+        }
     }
 }
