--- a/TicketTrackingSystem.MVC/Views/Role/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Role/Index.cshtml
@@ -7,50 +7,55 @@
     bool canAdd = false;
     bool canEdit = false;
     bool canDelete = false;
-    if (User.Identity.IsAuthenticated)
+
+}
+@if (User.Identity.IsAuthenticated)
+{
+
+    var user = await _userService.GetUserByClaim(User);
+    var userId = user.Id;
+    permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewRole.ToString()
+                                                                , PermissionName.CreateRole.ToString()
+                                                                , PermissionName.EditRole.ToString()
+                                                                , PermissionName.DeleteRole.ToString());
+    canView = permissionCheckResult[PermissionName.ViewRole.ToString()];
+    canAdd = permissionCheckResult[PermissionName.CreateRole.ToString()];
+    canEdit = permissionCheckResult[PermissionName.EditRole.ToString()];
+    canDelete = permissionCheckResult[PermissionName.DeleteRole.ToString()];
+
+    <input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
+    <input type="hidden" id="canAdd" value="@(canAdd ? "true" : "false" )" />
+    <input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
+    <input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
+    @if (!canView && !canAdd && !canView && !canDelete)
+    {
+        <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
+    }
+    @if (canAdd)
+    {
+        <div class="row">
+            <div class="col text-end">
+                <button class="btn btn-primary" id="addButton">Add Role</button>
+            </div>
+        </div>
+    }
+    @if (canView)
     {
 
-        var user = await _userService.GetUserByClaim(User);
-        var userId = user.Id;
-        permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewRole.ToString()
-                                                                    , PermissionName.CreateRole.ToString()
-                                                                    , PermissionName.EditRole.ToString()
-                                                                    , PermissionName.DeleteRole.ToString());
-        canView = permissionCheckResult[PermissionName.ViewRole.ToString()];
-        canAdd = permissionCheckResult[PermissionName.CreateRole.ToString()];
-        canEdit = permissionCheckResult[PermissionName.EditRole.ToString()];
-        canDelete = permissionCheckResult[PermissionName.DeleteRole.ToString()];
-
+        <div class="row justify-content-center">
+            <div class="col">
+                <table id="roleTable" class="table table-striped table-bordered " cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
     }
-}
-<input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
-<input type="hidden" id="canAdd" value="@(canAdd ? "true" : "false" )" />
-<input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
-<input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
-@if (canAdd)
-{
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary" id="addButton">Add Role</button>
-        </div>
-    </div>
-}
-@if (canView)
-{
-
-    <div class="row justify-content-center">
-        <div class="col">
-            <table id="roleTable" class="table table-striped table-bordered " cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-            </table>
-        </div>
-    </div>
 }
 
 <!-- Modal -->
@@ -77,23 +82,25 @@
 @section Scripts {
     <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.js"></script>
 
-    @if (canView)
-    {
-        <script type="module" src="~/view/role/roletable.js"></script>
-        <script type="module" src="~/view/role/addRole.js"></script> 
-        <script type="module" src="~/view/role/deleteRole.js"></script>
-        <script type="module" src="~/view/role/editRole.js"></script> 
-    }
-    else if (canAdd)
-    {
+    @{
+        if (canView)
+        {
+            <script type="module" src="~/view/role/roletable.js"></script>
+        }
+        if (canAdd)
+        {
 
-    }
-    else if (canEdit)
-    {
+            <script type="module" src="~/view/role/addRole.js"></script>
+        }
+        if (canEdit)
+        {
+            <script type="module" src="~/view/role/editRole.js"></script>
 
-    }
-    else if (canDelete)
-    {
+        }
+        if (canDelete)
+        {
+            <script type="module" src="~/view/role/deleteRole.js"></script>
 
+        }
     }
 }
