--- a/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,37 @@
-﻿<html lang="en">
+﻿@inject IPermissionService _permissionService
+@inject IUserService _userService;
+@{
+    Dictionary<string, bool> permissionCheckResult;
+    bool viewUser = false;
+    bool viewClient = false;
+    bool viewDepartment = false;
+    bool viewRole = false;
+    bool viewTicket = false;
+    bool viewPermission = false;
+    bool viewProject = false;
+    if (User.Identity.IsAuthenticated)
+    {
+
+        var user = await _userService.GetUserByClaim(User);
+        var userId = user.Id;
+        permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewUser.ToString()
+                                                                    , PermissionName.ViewClient.ToString()
+                                                                    , PermissionName.ViewDepartment.ToString()
+                                                                    , PermissionName.ViewRole.ToString()
+                                                                    , PermissionName.ViewTicket.ToString()
+                                                                    , PermissionName.ViewPermission.ToString()
+                                                                    , PermissionName.ViewProject.ToString());
+        viewUser = permissionCheckResult[PermissionName.ViewUser.ToString()];
+        viewClient = permissionCheckResult[PermissionName.ViewClient.ToString()];
+        viewDepartment = permissionCheckResult[PermissionName.ViewDepartment.ToString()];
+        viewRole = permissionCheckResult[PermissionName.ViewRole.ToString()];
+        viewTicket = permissionCheckResult[PermissionName.ViewTicket.ToString()];
+        viewPermission = permissionCheckResult[PermissionName.ViewPermission.ToString()];
+        viewProject = permissionCheckResult[PermissionName.ViewProject.ToString()];
+
+    }
+}
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,9 +40,9 @@
     @* <link rel="stylesheet" href="~/TicketTrakingSystem.MVC.styles.css" asp-append-version="true" /> *@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    @* <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" /> *@
     <link href="~/lib/userui/css/useruistyle.min.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     @await RenderSectionAsync("Style", required: false)
 
 </head>
@@ -19,13 +52,43 @@
         <div class="border-end bg-white" id="sidebar-wrapper">
             <div class="sidebar-heading border-bottom bg-light">Ticket Traking System</div>
             <div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Role" asp-action="Index">Role</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="User" asp-action="Index">Users</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Client" asp-action="Index">Clients</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Permission" asp-action="Index">Permissions</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Department" asp-action="Index">Departments</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Project" asp-action="Index">Projects</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Ticket" asp-action="Index">Tickets</a>
+                @{
+                    if (viewRole)
+                    {
+                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Role" asp-action="Index">Role</a>
+
+                    }
+                    if (viewUser)
+                    {
+
+                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="User" asp-action="Index">Users</a>
+                    }
+                    if (viewClient)
+                    {
+
+                        // <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Client" asp-action="Index">Clients</a>
+                    }
+                    if (viewPermission)
+                    {
+
+                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Permission" asp-action="Index">Permissions</a>
+                    }
+                    if (viewDepartment)
+                    {
+
+                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Department" asp-action="Index">Departments</a>
+                    }
+                    if (viewProject)
+                    {
+
+                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Project" asp-action="Index">Projects</a>
+                    }
+                    if (viewTicket)
+                    {
+
+                        // <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Ticket" asp-action="Index">Tickets</a>
+                    }
+                }
             </div>
         </div>
         <!-- Page content wrapper-->
