--- a/TicketTrackingSystem.MVC/Views/User/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/User/Index.cshtml
@@ -3,61 +3,70 @@
 @{
     ViewData["Title"] = "User";
     Dictionary<string, bool> permissionCheckResult;
-    bool canView =false;
+    bool canView = false;
     bool canAdd = false;
     bool canEdit = false;
     bool canDelete = false;
-    if(User.Identity.IsAuthenticated){
+
+}
+@{
+    if (User.Identity.IsAuthenticated)
+    {
 
         var user = await _userService.GetUserByClaim(User);
         var userId = user.Id;
         permissionCheckResult = await _permissionService.HasPermissionAsync(userId, PermissionName.ViewUser.ToString()
-                                                                    ,PermissionName.CreateUser.ToString()
-                                                                    ,PermissionName.EditUser.ToString()
-                                                                    ,PermissionName.DeleteUser.ToString());
+                                                                    , PermissionName.CreateUser.ToString()
+                                                                    , PermissionName.EditUser.ToString()
+                                                                    , PermissionName.DeleteUser.ToString());
         canView = permissionCheckResult[PermissionName.ViewUser.ToString()];
         canAdd = permissionCheckResult[PermissionName.CreateUser.ToString()];
         canEdit = permissionCheckResult[PermissionName.EditUser.ToString()];
         canDelete = permissionCheckResult[PermissionName.DeleteUser.ToString()];
 
+
+        <input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
+        <input type="hidden" id="canAdd" value="@(canAdd ? " true" : "false" )" />
+        <input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
+        <input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
+        @if (!canView && !canAdd && !canView && !canDelete)
+        {
+            <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
+        }
+        @if (canAdd)
+        {
+
+            <div class="row">
+                <div class="col text-end">
+                    <button class="btn btn-primary" id="addBtn">Add User</button>
+                </div>
+            </div>
+        }
+        @if (canView)
+        {
+
+            <div class="row justify-content-center">
+                <div class="col">
+                    <table id="userTable" class="table table-striped table-bordered " cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Full Name</th>
+                                <th>User Name</th>
+                                <th>Email</th>
+                                <th>Phone Number</th>
+                                <th>User Type</th>
+                                <th>Department Name</th>
+                                <th>Role Name</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+        }
     }
 }
-<input type="hidden" id="canView" value="@(canView ? "true" : "false")" />
-<input type="hidden" id="canAdd" value="@(canAdd ? " true" : "false" )" />
-<input type="hidden" id="canEdit" value="@(canEdit ? "true" : "false")" />
-<input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
-@if(canAdd){
-
-<div class="row">
-    <div class="col">
-        <button class="btn btn-primary" id="addBtn">Add User</button>
-    </div>
-</div>
-}
-@if (canView)
-{
-
-<div class="row justify-content-center">
-    <div class="col">
-        <table id="userTable" class="table table-striped table-bordered " cellspacing="0">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Full Name</th>
-                    <th>User Name</th>
-                    <th>Email</th>
-                    <th>Phone Number</th>
-                    <th>User Type</th>
-                    <th>Department Name</th>
-                    <th>Role Name</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-        </table>
-    </div>
-</div>
-}
-
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -84,20 +93,26 @@
 @section Scripts {
 
     <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/af-2.7.0/b-3.2.0/b-colvis-3.2.0/b-html5-3.2.0/datatables.min.js"></script>
-    @if(canView){
-        <script type="module" src="~/view/user/usertable.js"></script>
-        <script type="module" src="~/view/user/addUser.js"></script>
-        <script type="module" src="~/view/user/deleteUser.js"></script>
-        <script type="module" src="~/view/user/editUser.js"></script>
+    @{
+        if (canView)
+        {
+            <script type="module" src="~/view/user/usertable.js"></script>
 
-    }
-    else if(canAdd){
+        }
+        if (canAdd)
+        {
+            <script type="module" src="~/view/user/addUser.js"></script>
 
-    }
-    else if(canEdit){
+        }
+        if (canEdit)
+        {
+            <script type="module" src="~/view/user/editUser.js"></script>
 
-    }
-    else if(canDelete){
+        }
+        if (canDelete)
+        {
 
+            <script type="module" src="~/view/user/deleteUser.js"></script>
+        }
     }
 }
