Enhance services and update ticket handling logic
- Added XML documentation to various service interfaces.
- Improved error handling in `DeleteDepartmentAsync` method.
- Added Redis caching comment in `PermissionService`.
- Introduced non-deletable role IDs in `RoleService`.
- Modified ticket filtering in `GetAllTicketForUserPaginatedAsync`.
- Allowed all users to create tickets in `AddTicketAsync`.
- Updated `UpdateTicketWithAutoStageAsync` to handle final stage tickets.
- Added `UserType` to user seeding data in `ModelBuilderExtensions.cs`.
- Removed `RolePermission` configuration in `TicketTrackingSystemDbContext.cs`.
- Added `break` statement in `RoleController.cs`.
- Updated hidden input and modal content in `Tickets.cshtml` and `editTicket.js`.
- Implemented delete permission logic in `deletePermission.js`.
- Corrected modal title in `addTicket.js`.

--- a/TicketTrackingSystem.MVC/Views/Project/Tickets.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Tickets.cshtml
@@ -33,6 +33,7 @@
     <input type="hidden" id="canDelete" value="@(canDelete ? "true" : "false")" />
 
     <input type="hidden" id="projectId" value="@Model.Id" />
+    <input type="hidden" id="inStage" value="@ViewData["StageName"]" />
     <div class="row">
         <div class="col">
             <div class="card">
