Enhance ticket history tracking and UI improvements
- Updated `TicketHistoryService` to improve filtering and querying in `GetAllTicketHistoryForReportAsync`, including pagination and search enhancements.
- Added `CycleNumber` property to `TicketHistory` records for better tracking of ticket stages.
- Updated `TicketTrackingSystemDbContextModelSnapshot` to reflect the new `CycleNumber` column in the database schema.
- Enhanced Razor views with improved styling and layout for a modern look, including dark mode support.
- Updated `bundleconfig.json` to include new CSS for UserUI styles.
- Modified JavaScript files to improve button styles and functionalities, including asynchronous data handling in `reportTable.js`.

--- a/TicketTrackingSystem.MVC/Views/Project/Tickets.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Tickets.cshtml
@@ -34,9 +34,9 @@
 
     <input type="hidden" id="projectId" value="@Model.Id" />
     <input type="hidden" id="inStage" value="@ViewData["StageName"]" />
-    <div class="row">
+    <div class="row mb-5">
         <div class="col">
-            <div class="card">
+            <div class="card shadow">
                 <div class="card-header">
                     <h1>Details</h1>
                 </div>
@@ -60,69 +60,70 @@
             </div>
         </div>
     </div>
-    <hr class="bg-black border-3 border-top border-dark mb-5" />
+    <div class="rounded border p-3 mb-3 shadow">
 
-    <div class="row">
-        <div class="col">
-            <h2>Project @ViewData["StageName"]</h2>
-        </div>
-        @if (canAdd)
-        {
-
-            <div class="col  text-end">
-                <button class="btn btn-primary" id="addButton">Add Ticket</button>
+        <div class="row">
+            <div class="col">
+                <h2>Project @ViewData["StageName"]</h2>
             </div>
-        }
+            @if (canAdd)
+            {
+
+                <div class="col  text-end">
+                    <button class="btn btn-primary" id="addButton">Add Ticket</button>
+                </div>
+            }
+            @if (canView && user.UserType.Equals(UserType.Member))
+            {
+                <div class="col  text-end">
+                    <button class="btn btn-primary" id="reinitializeBtn">My Tickets</button>
+                </div>
+            }
+
+        </div>
+
         @if (canView && user.UserType.Equals(UserType.Member))
         {
-            <div class="col  text-end">
-                <button class="btn btn-primary" id="reinitializeBtn">My Tickets</button>
+            <div class="row justify-content-center">
+                <div class="col">
+                    <table id="memberTicketTable" class="table table-striped table-bordered shadow" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Title</th>
+                                <th>Description</th>
+                                <th>Status</th>
+                                <th>Created At</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
             </div>
         }
 
+
+        @if (canView && user.UserType.Equals(UserType.Client))
+        {
+            <div class="row justify-content-center">
+                <div class="col">
+                    <table id="ticketTable" class="table table-striped table-bordered shadow" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Title</th>
+                                <th>Description</th>
+                                <th>Status</th>
+                                <th>Created At</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+
+        }
     </div>
-
-    if (canView && user.UserType.Equals(UserType.Member))
-    {
-        <div class="row justify-content-center">
-            <div class="col">
-                <table id="memberTicketTable" class="table table-striped table-bordered " cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Title</th>
-                            <th>Description</th>
-                            <th>Status</th>
-                            <th>Created At</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-        </div>
-    }
-
-
-    if (canView && user.UserType.Equals(UserType.Client))
-    {
-        <div class="row justify-content-center">
-            <div class="col">
-                <table id="ticketTable" class="table table-striped table-bordered " cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Title</th>
-                            <th>Description</th>
-                            <th>Status</th>
-                            <th>Created At</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-        </div>
-
-    }
 
     <!-- Modal -->
     <div id="myModal" class="modal fade" role="dialog">
