--- a/TicketTrackingSystem.MVC/Views/Department/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Department/Index.cshtml
@@ -32,12 +32,13 @@
     {
         <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
     }
+    <div class="rounded border p-3 shadow">
     @if (canAdd)
     {
 
-        <div class="row">
+        <div class="row mb-2">
             <div class="col text-end">
-                <button class="btn btn-primary" id="addDepartment">Add Department</button>
+                    <button class="btn btn-primary shadow" id="addDepartment">Add Department</button>
             </div>
         </div>
     }
@@ -46,7 +47,7 @@
 
         <div class="row justify-content-center">
             <div class="col">
-                <table id="departmentTable" class="table table-striped table-bordered " cellspacing="0">
+                    <table id="departmentTable" class="table table-striped table-bordered shadow" cellspacing="0">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -59,6 +60,7 @@
             </div>
         </div>
     }
+    </div>
 }
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
