--- a/TicketTrackingSystem.MVC/Views/Permission/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Permission/Index.cshtml
@@ -31,12 +31,14 @@
 {
     <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
 }
+<div class="rounded border p-3 shadow">
+
 @if (canAdd)
 {
 
     <div class="row">
         <div class="col text-end">
-            <button class="btn btn-primary" id="addBtn">Add Permission</button>
+                <button class="btn btn-primary shadow" id="addBtn">Add Permission</button>
         </div>
     </div>
 }
@@ -45,7 +47,7 @@
 
     <div class="row justify-content-center">
         <div class="col">
-            <table id="roleTable" class="table table-striped table-bordered " cellspacing="0">
+                <table id="roleTable" class="table table-striped table-bordered shadow" cellspacing="0">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -58,6 +60,7 @@
         </div>
     </div>
 }
+</div>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
