--- a/TicketTrackingSystem.MVC/Views/Project/Details.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Details.cshtml
@@ -5,9 +5,9 @@
 }
 
 <input type="hidden" id="projectId" value="@Model.Id" />
-<div class="row">
+<div class="row mb-5">
     <div class="col">
-        <div class="card">
+        <div class="card shadow">
             <div class="card-header">
                 <h1>Details</h1>
             </div>
@@ -31,34 +31,35 @@
         </div>
     </div>
 </div>
-<hr class="bg-black border-3 border-top border-dark mb-5" />
+<div class="rounded border p-3 shadow">
 
-<div class="row mb-3">
+    <div class="row mb-3">
 
         <div class="col">
             <h3 class="m-0">All Users</h3>
         </div>
-    <div class="col  text-end">
-        <button id="switchBtn" class="btn btn-primary ">Show Users With Role</button>
+        <div class="col  text-end">
+            <button id="switchBtn" class="btn btn-primary ">Show Users With Role</button>
+        </div>
     </div>
-</div>
-<div class="row justify-content-center">
-    <div class="col">
-        <table id="userMemberTable" class="table table-striped table-bordered " cellspacing="0">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Full Name</th>
-                    <th>User Name</th>
-                    <th>Email</th>
-                    <th>Phone Number</th>
-                    <th>User Type</th>
-                    <th>Department Name</th>
-                    <th>Role Name</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-        </table>
+    <div class="row justify-content-center">
+        <div class="col">
+            <table id="userMemberTable" class="table table-striped table-bordered shadow" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Full Name</th>
+                        <th>User Name</th>
+                        <th>Email</th>
+                        <th>Phone Number</th>
+                        <th>User Type</th>
+                        <th>Department Name</th>
+                        <th>Role Name</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
     </div>
 </div>
 <!-- Modal -->
