--- a/TicketTrackingSystem.MVC/Views/Project/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Index.cshtml
@@ -34,59 +34,72 @@
     {
         <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
     }
-    <div class="row mt-5">
-        @if (canView && user.UserType.Equals(UserType.Member) && User.IsInRole("Admin"))
-        {
+    @if (user.UserType.Equals(UserType.Member) && User.IsInRole("Admin"))
+    {
+        <div class="rounded border p-3 mb-3 shadow">
+        <div class="row mt-2 mb-3">
+            @if (canView )
+            {
                 <div class="col">
                     <h3>All Projects</h3>
                 </div>
-        }
-        @if (canAdd && user.UserType.Equals(UserType.Member))
-        {
-            <div class="col text-end">
-                <button class="btn btn-primary" id="addButton">Add Project</button>
-            </div>
-        }
-    </div>
-    @if (canView && user.UserType.Equals(UserType.Member) && User.IsInRole("Admin"))
-    {
-        <div class="row justify-content-center">
-            <div class="col">
-                <table id="projectTable" class="table table-striped table-bordered " cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Created At</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
+            }
+            @if (canAdd)
+            {
+                <div class="col text-end">
+                        <button class="btn btn-primary shadow" id="addButton">Add Project</button>
+                </div>
+            }
         </div>
-        <hr class="bg-black border-3 border-top border-dark mb-5" />
+        @if (canView)
+        {
+            <div class="row justify-content-center">
+                <div class="col">
+                        <table id="projectTable" class="table table-striped table-bordered shadow" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Description</th>
+                                <th>Created At</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+        }
+        </div>
     }
+
     @if (canView)
     {
-        <div class="row">
-            <div class="col">
-                <h3>My Projects</h3>
+        <div class="rounded border p-3 shadow">
+            <div class="row">
+                <div class="col">
+                    <h3>My Projects</h3>
+                </div>
+                @if (canAdd && !User.IsInRole("Admin"))
+                {
+                    <div class="col text-end">
+                        <button class="btn btn-primary" id="addButton">Add Project</button>
+                    </div>
+                }
             </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col">
-                <table id="userProjectTable" class="table table-striped table-bordered " cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Created At</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                </table>
+            <div class="row justify-content-center">
+                <div class="col">
+                    <table id="userProjectTable" class="table table-striped table-bordered shadow" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Description</th>
+                                <th>Created At</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
             </div>
         </div>
     }
