--- a/TicketTrackingSystem.MVC/Views/Project/Messages.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Project/Messages.cshtml
@@ -4,9 +4,9 @@
 }
 
 <input type="hidden" id="ticketId" value="@Model.Id" />
-<div class="row">
+<div class="row mb-5">
     <div class="col">
-        <div class="card">
+        <div class="card shadow">
             <div class="card-header">
                 <h1>Ticket Details</h1>
             </div>
@@ -30,26 +30,28 @@
         </div>
     </div>
 </div>
-<hr class="bg-black border-3 border-top border-dark mb-5" />
-<div class="row mb-3">
+<div class="rounded border p-3 mb-3 shadow">
 
-    <div class="col">
-        <h3 class="m-0">All Message</h3>
+    <div class="row mb-3">
+
+        <div class="col">
+            <h3 class="m-0">All Message</h3>
+        </div>
     </div>
-</div>
-<div class="row justify-content-center">
-    <div class="col">
-        <table id="ticketMessageTable" class="table table-striped table-bordered " cellspacing="0">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    @* <th>Message</th> *@
-                    <th>StageAtTimeOfMessage</th>
-                    <th>Sent At</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-        </table>
+    <div class="row justify-content-center">
+        <div class="col">
+            <table id="ticketMessageTable" class="table table-striped table-bordered shadow" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        @* <th>Message</th> *@
+                        <th>StageAtTimeOfMessage</th>
+                        <th>Sent At</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
     </div>
 </div>
 <!-- Modal -->
