--- a/TicketTrackingSystem.MVC/Views/Role/Details.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Role/Details.cshtml
@@ -1,18 +1,13 @@
 ﻿@model RoleDto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Role Details";
 }
 
-<div class="row">
-    <div class="col">
-        <h2>Role Details</h2>
-    </div>
-</div>
 <input type="hidden" id="roleId" value="@Model.Id" />
-<div class="row">
+<div class="row mb-5">
     <div class="col">
-        <div class="card">
+        <div class="card shadow">
             <div class="card-header">
                 <h1>Details</h1>
             </div>
@@ -32,7 +27,7 @@
         </div>
     </div>
 </div>
-<hr class="bg-black border-3 border-top border-dark mb-5" />
+<div class="rounded border p-3 shadow">
 
 <div class="row mb-2">
 
@@ -45,7 +40,7 @@
 </div>
 <div class="row justify-content-center">
     <div class="col">
-        <table id="userWithoutRoleTable" class="table table-striped table-bordered " cellspacing="0">
+            <table id="userWithoutRoleTable" class="table table-striped table-bordered shadow" cellspacing="0">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -62,6 +57,8 @@
         </table>
     </div>
 </div>
+</div>
+
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
