--- a/TicketTrackingSystem.MVC/Views/Role/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Role/Index.cshtml
@@ -31,11 +31,13 @@
     {
         <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
     }
+    <div class="rounded border p-3 shadow">
+
     @if (canAdd)
     {
         <div class="row">
             <div class="col text-end">
-                <button class="btn btn-primary" id="addButton">Add Role</button>
+                    <button class="btn btn-primary shadow" id="addButton">Add Role</button>
             </div>
         </div>
     }
@@ -44,7 +46,7 @@
 
         <div class="row justify-content-center">
             <div class="col">
-                <table id="roleTable" class="table table-striped table-bordered " cellspacing="0">
+                    <table id="roleTable" class="table table-striped table-bordered shadow" cellspacing="0">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -56,6 +58,8 @@
             </div>
         </div>
     }
+    </div>
+
 }
 
 <!-- Modal -->
