--- a/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
+++ b/TicketTrackingSystem.MVC/Views/Shared/_Layout.cshtml
@@ -37,10 +37,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TicketTrakingSystem.MVC</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    @* <link rel="stylesheet" href="~/TicketTrakingSystem.MVC.styles.css" asp-append-version="true" /> *@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    @* <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" /> *@
     <link href="~/lib/userui/css/useruistyle.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     @await RenderSectionAsync("Style", required: false)
@@ -49,19 +47,19 @@
 <body>
     <div class="d-flex" id="wrapper">
         <!-- Sidebar-->
-        <div class="border-end " id="sidebar-wrapper">
+        <div class="border-end shadow" id="sidebar-wrapper">
             <div class="sidebar-heading border-bottom pb-4">Ticket Traking System</div>
             <div class="list-group list-group-flush">
                 @{
                     if (viewRole)
                     {
-                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Role" asp-action="Index">Role</a>
+                        <a class="list-group-item list-group-item-action  p-3" asp-controller="Role" asp-action="Index"><i class="bi bi-person-lines-fill"></i> Role</a>
 
                     }
                     if (viewUser)
                     {
 
-                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="User" asp-action="Index">Users</a>
+                        <a class="list-group-item list-group-item-action  p-3" asp-controller="User" asp-action="Index"><i class="bi bi-people-fill"></i> Users</a>
                     }
                     if (viewClient)
                     {
@@ -71,17 +69,17 @@
                     if (viewPermission)
                     {
 
-                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Permission" asp-action="Index">Permissions</a>
+                        <a class="list-group-item list-group-item-action  p-3" asp-controller="Permission" asp-action="Index"><i class="bi bi-shield-fill"></i> Permissions</a>
                     }
                     if (viewDepartment)
                     {
 
-                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Department" asp-action="Index">Departments</a>
+                        <a class="list-group-item list-group-item-action  p-3" asp-controller="Department" asp-action="Index"><i class="bi bi-building-fill"></i> Departments</a>
                     }
                     if (viewProject)
                     {
 
-                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="Project" asp-action="Index">Projects</a>
+                        <a class="list-group-item list-group-item-action  p-3" asp-controller="Project" asp-action="Index"><i class="bi bi-file-earmark-text-fill"></i> Projects</a>
                     }
                     if (viewTicket)
                     {
@@ -91,7 +89,7 @@
                     //need to change
                     if (viewRole)
                     {
-                        <a class="list-group-item list-group-item-action list-group-item-light p-3" asp-controller="TicketHistory" asp-action="TicketReport">Ticket Report</a>
+                        <a class="list-group-item list-group-item-action  p-3" asp-controller="TicketHistory" asp-action="TicketReport"><i class="bi bi-file-earmark-spreadsheet-fill"></i> Tickets Report</a>
 
                     }
                 }
@@ -100,9 +98,9 @@
         <!-- Page content wrapper-->
         <div id="page-content-wrapper">
             <!-- Top navigation-->
-            <nav class="navbar navbar-expand-lg border-bottom">
+            <nav class="navbar navbar-expand-lg border-bottom shadow">
                 <div class="container-fluid">
-                    <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
+                    <button class="btn btn-primary" id="sidebarToggle"><i class="bi bi-list"></i> Menu</button>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
