--- a/TicketTrackingSystem.MVC/Views/TicketHistory/TicketReport.cshtml
+++ b/TicketTrackingSystem.MVC/Views/TicketHistory/TicketReport.cshtml
@@ -33,7 +33,7 @@
     }
     @if (canView)
     {
-        <div class="row mb-3">
+        <div class="row mb-3 rounded border p-2 pb-3 shadow">
             <div class="col-md-4">
                 <label>Stage Filter:</label>
                 <select id="stageFilter" class="form-select">
@@ -48,9 +48,9 @@
             </div>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center rounded border p-2 shadow">
             <div class="col">
-                <table id="reportTable" class="table table-striped table-bordered " cellspacing="0">
+                <table id="reportTable" class="table table-striped table-bordered shadow" cellspacing="0">
                     <thead>
                         <tr>
                             <th>TicketId</th>
