--- a/TicketTrackingSystem.MVC/Views/User/Index.cshtml
+++ b/TicketTrackingSystem.MVC/Views/User/Index.cshtml
@@ -33,12 +33,14 @@
         {
             <h3>You Do <strong>NOT</strong> Have Any Permission In @ViewData["Title"] Page Contact The Admin ...</h3>
         }
+        <div class="rounded border p-3 shadow">
+
         @if (canAdd)
         {
 
             <div class="row">
                 <div class="col text-end">
-                    <button class="btn btn-primary" id="addBtn">Add User</button>
+                        <button class="btn btn-primary shadow" id="addBtn">Add User</button>
                 </div>
             </div>
         }
@@ -47,7 +49,7 @@
 
             <div class="row justify-content-center">
                 <div class="col">
-                    <table id="userTable" class="table table-striped table-bordered " cellspacing="0">
+                        <table id="userTable" class="table table-striped table-bordered shadow" cellspacing="0">
                         <thead>
                             <tr>
                                 <th>ID</th>
@@ -65,6 +67,7 @@
                 </div>
             </div>
         }
+        </div>
     }
 }
 <!-- Modal -->
